# kerneldb

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.agents/: project.json
.agents/bootstrap/: amplify-installation-report.md
.agents/kt/: architecture.md
.agents/pm/: pm-current-state.md  pm-glossary.md  pm-index.md
.agents/pm/units/: build-and-packaging.md  code-object-extraction.md  core-library.md  disassembly.md  dwarf-address-map.md  python-bindings.md  testing.md
.agents/policy/: guardrails.md  verification.md
.agents/state/: active-workflows.md  current-focus.md
.claude/skills/decision-workflow/: SKILL.md
.claude/skills/discussion-refine/: SKILL.md
.claude/skills/docs-sync/: SKILL.md
.claude/skills/feedback/: SKILL.md
.claude/skills/lessons-forward/: SKILL.md
.claude/skills/pm-bugfix/: SKILL.md
.claude/skills/pm-feature/: SKILL.md
.claude/skills/pm-init/: SKILL.md
.claude/skills/pm-investigation/: SKILL.md
.claude/skills/pm-load/: SKILL.md
.claude/skills/pm-performance/: SKILL.md
.claude/skills/pm-refactor/: SKILL.md
.claude/skills/pm-reflect/: SKILL.md
.claude/skills/pm-restructure/: SKILL.md
.claude/skills/pm-review/: SKILL.md
.claude/skills/pm-update/: SKILL.md
.claude/skills/pm-validate/: SKILL.md
.claude/skills/session-capture/: SKILL.md
.claude/skills/session-close/: SKILL.md
.claude/skills/session-init/: SKILL.md
.claude/skills/session-review/: SKILL.md
.claude/skills/state-check/: SKILL.md
.claude/skills/workflow-complete/: SKILL.md
.claude/skills/workflow-create/: SKILL.md
.claude/skills/workflow-readiness-check/: SKILL.md
.claude/skills/workflow-refine/: SKILL.md
.claude/skills/workflow-resume/: SKILL.md
.github/scripts/: container_build.sh  container_exec.sh
.github/workflows/: ci.yml
apptainer/: kerneldb.def
cmake_modules/: test_dwarf_init_b.cpp
examples/01_hip_kernels/: README.md  example.py
examples/02_triton_kernels/: README.md  example.py
examples/03_kernel_arguments/: README.md  example.py
examples/04_nested_structs/: README.md  example.py
examples/05_templates/: README.md  example.py
examples/06_typedef_resolution/: README.md  example.py
examples/07_lazy_load/: example.py  example_runtime_error_failures.py
inc/: kernelDB.h
include/: kernelDB.h
kerneldb/: __init__.py  api.py
src/: CMakeLists.txt  addressMap.cc  co_extract.cc  disassemble.cc  kernelDB.cc  pybind11_wrapper.cc
test/: CMakeLists.txt  hsaco_test.cc  kdbtest.cc
tests/: conftest.py  test_arguments.py  test_imports.py  test_kernels.py  test_lazy_loading.py
