# SPDX-License-Identifier: MIT
# Copyright (c) 2024 Advanced Micro Devices, Inc. All rights reserved.

[build-system]
requires = ["setuptools>=61", "wheel", "cmake>=3.18", "setuptools-scm>=8", "pybind11>=2.6"]
build-backend = "setuptools.build_meta"

[project]
name = "kerneldb"
dynamic = ["version"]
description = "C++ library for querying data within CDNA kernel implementations, supporting memory access efficiency analysis."
authors = [
    { name = "Keith Lowery", email = "Keith.Lowery@amd.com" },
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/AMDResearch/kerneldb"
Repository = "https://github.com/AMDResearch/kerneldb"
Documentation = "https://github.com/AMDResearch/kerneldb"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["kerneldb"]

[tool.setuptools.package-data]
kerneldb = ["*.so", "*.so.*"]

[tool.setuptools.dynamic]
version = {attr = "setuptools_scm.get_version"}

# ---- setuptools-scm versioning ----
[tool.setuptools_scm]
version_scheme = "post-release"   # .postN after last tag
local_scheme = "node-and-date"    # add commit hash (e.g. +gabc1234) and date (e.g. +20250914)
fallback_version = "0.0.0"        # used if git metadata unavailable